Updates in Sass for index page

--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./CSS/shared.css" />
-    <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="./css/animation.css" />
-    <link rel="stylesheet" href="./css/mainNav.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./mainpage.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/dbb28dec5b.js" crossorigin="anonymous"></script>
     <title>Hire It! Canada</title>
 </head>
 
 <body>
     <main>
-        <div class="wrapper">
         <header>
             <!-- Top Navigation Menu -->
+            <div class="wrapper">
             <nav class="menu">
                 <div class="logo">
                     <img src="./images/SVG/Asset 1.svg" />
@@ -38,14 +36,14 @@
         </header>
     <!-- Main CTA -->
         <section>
-            <div class="container">
-                <div class="wrapper">
+            <div class="container parallax">
+                <div class="cta-container">
                 <h1 class="imgTitle">Find a job in Canada</h1>
                 <div class="button">
                     <button type="submit" class="btnHire">FIND A JOB</button>
                 </div>
                 </div>
-                <div>
+                <div class="cta-container">
                 <h1 class="imgTitle">Hire a Talent Abroad</h1>
                 <div class="button">
                     <button type="submit" class="btnHire">HIRE A TALENT</button>
@@ -82,12 +80,13 @@
                         <a href="#">Read More</a>
                     </div>
                 </div>
-            </div>
+           
                 <figure>
                     <img src="./images/womanlanding-min.png" class="imgWoman">
                 </figure>
+                 </div>
         </section>
-        <section class="resources">
+        <section class="resources parallax">
         <div class="wrapper">
             <div class="servCandidates">
                 <div class="sectionTitle">
@@ -95,14 +94,18 @@
                 </div>
                 <section class="serviceBlock">
                     <div>
-                        <h3>Support 24/7</h3>
+                        <div class="titleService">
+                        <h3>Support 24/7</h3><i class="fa-solid fa-comment-question fa-sm"></i>
+                        </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum pellentesque condimentum
                             elementum enim ac arcu arcu.
                         </p>
                     </div>
                     <section class="serviceBlock">
                         <div>
-                            <h3>Resume Match</h3>
+                            <div class="titleService">
+                            <h3>Resume Match</h3><i class="fa-solid fa-file-check fa-sm"></i>
+                            </div>
                             <p>Justo, amet feugiat bibendum sed lectus id pellentesque et justo. Ultricies volutpat leo
                                 risus
                                 ullamcorper id.
@@ -111,7 +114,9 @@
                     </section>
                     <section class="serviceBlock">
                         <div>
-                            <h3>Career Coach</h3>
+                            <div class="titleService">
+                            <h3>Career Coach</h3><i class="fa-solid fa-bullseye-arrow fa-sm"></i>
+                            </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum pellentesque
                                 condimentum
                                 elementum enim ac arcu arcu.
@@ -124,7 +129,7 @@
             </div>
         </div>
         </section>
-        <section class="businessServices">
+        <section class="businessServices parallax">
             <div class="wrapper">
             <div class="servBusiness">
                 <div class="sectionTitle">
@@ -132,14 +137,19 @@
                 </div>
                 <section class="serviceBlock">
                     <div>
-                        <h3>International Recruitment</h3>
+                        <div class="titleService">
+                        <h3>International Recruitment</h3><i class="fa-solid fa-bullhorn fa-lg"></i>
+                        
+                    </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum pellentesque condimentum
                             elementum enim ac arcu arcu.
                         </p>
                     </div>
                     <section class="serviceBlock">
                         <div>
-                            <h3>Training</h3>
+                            <div class="titleService">
+                            <h3>Training</h3><i class="fa-solid fa-graduation-cap fa-lg"></i>
+                            </div>
                             <p>Justo, amet feugiat bibendum sed lectus id pellentesque et justo. Ultricies volutpat leo
                                 risus
                                 ullamcorper id.
@@ -148,7 +158,9 @@
                     </section>
                     <section class="serviceBlock">
                         <div>
-                            <h3>Legal Support</h3>
+                            <div class="titleService">
+                            <h3>Legal Support</h3><i class="fa-solid fa-gavel fa-lg"></i>
+                            </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum pellentesque
                                 condimentum
                                 elementum enim ac arcu arcu.
