--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </header>
     <!-- Main CTA -->
         <section>
-            <div class="container parallax">
+            <div class="container">
                 <div class="cta-container">
                 <h1 class="imgTitle">Find a job in Canada</h1>
                 <div class="button">
@@ -129,7 +129,7 @@
             </div>
         </div>
         </section>
-        <section class="businessServices parallax">
+        <section class="businessServices">
             <div class="wrapper">
             <div class="servBusiness">
                 <div class="sectionTitle">
