talentpage/jobpage created

--- a/talent.html
+++ b/talent.html
@@ -42,7 +42,7 @@
                 <h1 class="talent-title">Search for opportunities in Canada</h1>
                     <div class="searchBar">
                         <form>
-                          <input type="text" placeholder="Search.." name="search">
+                          <input type="text" placeholder="Search for job title, city or skills" name="search">
                           <button type="submit">SEARCH</i></button>
                         </form>
                 </div>
@@ -52,63 +52,69 @@
         <section class="job-board">
             <div class="wrapper">
                 <h2>Job Openings</h2>
+                <div class="next-page">
+                <a>Next Page</a><i class="fa-solid fa-angle-right fa-sm-right"></i>
+            </div>
 <div class="board">
     <div class="jb-post">
         <div class="job-information">
-        <h3>Job title</h3>
-        <p>Location</p>
-        <p>Description</p>
+        <h3>Senior Product Manager</h3>
+        <p>Remote, North America</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
         </div>
         <button type="submit">APPLY</button>
         </div>
         <div class="jb-post">
             <div class="job-information">
-            <h3>Job title</h3>
-            <p>Location</p>
-            <p>Description</p>
-            </div>
+            <h3>Front-End Developer</h3>
+            <p>Toronto, ON</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
+        </div>
             <button type="submit">APPLY</button>
             </div>
             <div class="jb-post">
                 <div class="job-information">
-                <h3>Job title</h3>
-                <p>Location</p>
-                <p>Description</p>
-                </div>
+                <h3>Senior DevOps</h3>
+                <p>Toronto, ON</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
+            </div>
                 <button type="submit">APPLY</button>
                 </div>
                 <div class="jb-post">
                     <div class="job-information">
-                    <h3>Job title</h3>
-                    <p>Location</p>
-                    <p>Description</p>
-                    </div>
+                    <h3>Mobile Application Developer</h3>
+                    <p>Vancouver, BC</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
+                </div>
                     <button type="submit">APPLY</button>
                     </div>
                     <div class="jb-post">
                         <div class="job-information">
-                        <h3>Job title</h3>
-                        <p>Location</p>
-                        <p>Description</p>
-                        </div>
+                        <h3>UX Researcher</h3>
+                        <p>Remote</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
+                    </div>
                         <button type="submit">APPLY</button>
                         </div>
                         <div class="jb-post">
                             <div class="job-information">
-                            <h3>Job title</h3>
-                            <p>Location</p>
-                            <p>Description</p>
-                            </div>
+                            <h3>UX Designer</h3>
+                            <p>Toronto, ON</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
+                        </div>
                             <button type="submit">APPLY</button>
                             </div>
                             <div class="jb-post">
                                 <div class="job-information">
-                                <h3>Job title</h3>
-                                <p>Location</p>
-                                <p>Description</p>
-                                </div>
+                                <h3>Senior Backend Engineer </h3>
+                                <p>Montreal, QC</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
+                            </div>
                                 <button type="submit">APPLY</button>
                                 </div>
+            </div>
+            <div class="next-page">
+                <a>Next Page</a><i class="fa-solid fa-angle-right fa-sm-right"></i>
             </div>
             </section>
     </main>
