JS for job board created

--- a/jobpage.html
+++ b/jobpage.html
@@ -20,7 +20,7 @@
             <div class="wrapper">
             <nav class="menu">
                 <div class="logo">
-                    <img src="./images/SVG/Asset 1.svg" />
+                    <img src="./Assets/SVG/Asset 1.svg" />
                 </div>
                 <div class="mainNav">
                     <ul>
@@ -55,7 +55,9 @@
 
         <p>Remote, North America</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
-        </div>
+        <p>Mauris nec elementum enim. Ut posuere lectus mi, a ultricies ante blandit ut. Etiam tempor nibh nec massa vehicula, sed molestie diam euismod. Aliquam erat volutpat. Aenean sollicitudin eleifend metus, sit amet tempus libero volutpat quis. Curabitur sollicitudin, sapien vitae pretium hendrerit, tortor enim rhoncus eros, sed congue tellus nisi ut est. Cras iaculis nunc id aliquet ullamcorper. Praesent nec luctus odio. Nullam non ante sed nunc blandit ultricies vitae at nulla. Cras interdum risus ipsum, eget fringilla lectus eleifend at. Morbi condimentum ultrices tristique. Vestibulum accumsan fermentum sapien, consectetur interdum dolor laoreet et. Nulla velit neque, tincidunt sed lectus pharetra, finibus cursus quam.</p>
+    <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis dui felis, consequat nec augue eget, hendrerit hendrerit sem. Vivamus in ornare tortor. Cras in arcu at nulla egestas molestie a quis neque. Suspendisse vitae sem vehicula, rhoncus orci vitae, porta odio. Aliquam feugiat massa sit amet metus rutrum consectetur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis vel viverra neque. Vivamus ac ultricies magna.</p>    
+    </div>
         </div>
         <div class="application-form">
             <h2>Start applying for jobs now!</h2>
@@ -79,8 +81,12 @@
                             <span class="input__label">Portfolio</span>
                           </label>
                     </div>
-                      <input type="text"><input type="file">
+                    <div class="upload-resume">
+                      <input type="file">
+                    </div>
+                    <div class="send-application">
                 <button>APPLY</button>
+            </div>
             </form>
     
 
@@ -95,7 +101,7 @@
         <footer class="wrapper">
             <div class="footerMenu">
                 <div class="logoFooter">
-                    <img src="./images/SVG/Asset 1.svg" />
+                    <img src="./Assets/SVG/Asset 1.svg" />
                     <div>
                         <h5>2022 Hire It Canada - by Priscila Mattos</h5>
                     </div>
