--- a/talent.html
+++ b/talent.html
@@ -18,130 +18,79 @@
         <header>
             <!-- Top Navigation Menu -->
             <div class="wrapper">
-            <nav class="menu">
-                <div class="logo">
-                    <img src="./images/SVG/Asset 1.svg" />
-                </div>
-                <div class="mainNav">
-                    <ul>
-                        <li><a href="./index.html" class="decor">Home</a></li>
-                        <li><a href="#" class="decor">Blog</a></li>
-                        <li><a href="#" class="decor">Job Board</a></li>
-                        <li><a href="#" class="buttonMenu decor menuTalent">Talent</a></li>
-                        <li><a href="./company.html" class="buttonMenu decor menuCompanies">Companies</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+                <nav class="menu">
+                    <div class="logo">
+                        <img src="./Assets/SVG/Asset 1.svg" />
+                    </div>
+                    <div class="mainNav">
+                        <ul>
+                            <li><a href="./index.html" class="decor">Home</a></li>
+                            <li><a href="#" class="decor">Blog</a></li>
+                            <li><a href="#" class="decor">Job Board</a></li>
+                            <li><a href="#" class="buttonMenu decor menuTalent">Talent</a></li>
+                            <li><a href="./company.html" class="buttonMenu decor menuCompanies">Companies</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </header>
-    <!-- Main CTA -->
-    <main>
+        <!-- Main CTA -->
         <section class="container">
             <div class="wrapper">
                 <div class="talent-container">
-                <h1 class="talent-title">Search for opportunities in Canada</h1>
+                    <h1 class="talent-title">Search for opportunities in Canada</h1>
                     <div class="searchBar">
                         <form>
-                          <input type="text" placeholder="Search for job title, city or skills" name="search">
-                          <button type="submit">SEARCH</i></button>
+                            <input type="text" placeholder="Search for job title, city or skills" name="search">
+                            <button type="submit">SEARCH</button>
                         </form>
+                    </div>
                 </div>
-                </div>
-                           </div>
+            </div>
         </section>
         <section class="job-board">
             <div class="wrapper">
                 <h2>Job Openings</h2>
                 <div class="next-page">
-                <a>Next Page</a><i class="fa-solid fa-angle-right fa-sm-right"></i>
-            </div>
-<div class="board">
-    <div class="jb-post">
-        <div class="job-information">
-        <h3>Senior Product Manager</h3>
-        <p>Remote, North America</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
-        </div>
-        <button type="submit">APPLY</button>
-        </div>
-        <div class="jb-post">
-            <div class="job-information">
-            <h3>Front-End Developer</h3>
-            <p>Toronto, ON</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
-        </div>
-            <button type="submit">APPLY</button>
-            </div>
-            <div class="jb-post">
-                <div class="job-information">
-                <h3>Senior DevOps</h3>
-                <p>Toronto, ON</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
-            </div>
-                <button type="submit">APPLY</button>
+                    <a>Next Page</a><i class="fa-solid fa-angle-right fa-sm-right"></i>
                 </div>
-                <div class="jb-post">
-                    <div class="job-information">
-                    <h3>Mobile Application Developer</h3>
-                    <p>Vancouver, BC</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
+                <div class="board" id="job-board">
+
+
                 </div>
-                    <button type="submit">APPLY</button>
-                    </div>
-                    <div class="jb-post">
-                        <div class="job-information">
-                        <h3>UX Researcher</h3>
-                        <p>Remote</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
-                    </div>
-                        <button type="submit">APPLY</button>
-                        </div>
-                        <div class="jb-post">
-                            <div class="job-information">
-                            <h3>UX Designer</h3>
-                            <p>Toronto, ON</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
-                        </div>
-                            <button type="submit">APPLY</button>
-                            </div>
-                            <div class="jb-post">
-                                <div class="job-information">
-                                <h3>Senior Backend Engineer </h3>
-                                <p>Montreal, QC</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis posuere placerat. Donec ut orci a mi porttitor placerat. Suspendisse efficitur viverra rhoncus. Aliquam ac mi sit amet dolor scelerisque porttitor eget nec nisl. Integer cursus, orci nec rutrum hendrerit, ex nisl imperdiet nisl, id eleifend urna ligula ac risus. </p>
-                            </div>
-                                <button type="submit">APPLY</button>
-                                </div>
+                <div class="next-page">
+                    <a>Next Page</a><i class="fa-solid fa-angle-right fa-sm-right"></i>
+                </div>
+
             </div>
-            <div class="next-page">
-                <a>Next Page</a><i class="fa-solid fa-angle-right fa-sm-right"></i>
-            </div>
-            </section>
+        </section>
     </main>
-        <footer class="wrapper">
-            <div class="footerMenu">
-                <div class="logoFooter">
-                    <img src="./images/SVG/Asset 1.svg" />
-                    <div>
-                        <h5>2022 Hire It Canada - by Priscila Mattos</h5>
-                    </div>
-                </div>
-                <div class="linkFooter">
-                    <ul>
-                        <h3>Hire It Canada</h3>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Careers</a></li>
-                    </ul>
-                </div>
-                <div class="socialMedia">
-                    <h3>Find us on Social Media</h3>
-                    <a href="https://www.linkedin.com/" class="fa fa-linkedin"></a>
-                    <a href="https://www.twitter.com" class="fa fa-twitter"></a>
-                    <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+    <footer class="wrapper">
+        <div class="footerMenu">
+            <div class="logoFooter">
+                <img src="./Assets/SVG/Asset 1.svg" />
+                <div>
+                    <h5>2022 Hire It Canada - by Priscila Mattos</h5>
                 </div>
             </div>
-        
-        </footer>
-        </body>
-        </html>
+            <div class="linkFooter">
+                <ul>
+                    <h3>Hire It Canada</h3>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+            </div>
+            <div class="socialMedia">
+                <h3>Find us on Social Media</h3>
+                <a href="https://www.linkedin.com/" class="fa fa-linkedin"></a>
+                <a href="https://www.twitter.com" class="fa fa-twitter"></a>
+                <a href="https://www.instagram.com" class="fa fa-instagram"></a>
+            </div>
+        </div>
+
+    </footer>
+    <script src="./JavaScript/talentPage.js"></script>
+</body>
+
+</html>
