JS for Job Description & Application page

--- a/company.html
+++ b/company.html
@@ -41,7 +41,7 @@
           <ul>
             <li><a href="./index.html" class="decor">Home</a></li>
             <li><a href="#" class="decor">Blog</a></li>
-            <li><a href="./talent.html" class="decor">Job Board</a></li>
+            <li><a href="./jobBoard.html" class="decor">Job Board</a></li>
             <li>
               <a href="#" class="buttonMenu decor menuTalent">Talent</a>
             </li>
