--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./CSS/shared.css" />
-    <link rel="stylesheet" href="./mainpage.css" />
+    <link rel="stylesheet" href="./CSS/mainpage.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/dbb28dec5b.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
             <div class="wrapper">
                 <nav class="menu">
                     <div class="logo">
-                        <img src="./images/SVG/Asset 1.svg" />
+                        <img src="./Assets/SVG/Asset 1.svg" href="#" />
                     </div>
                     <div class="mainNav">
                         <ul>
@@ -84,7 +84,7 @@
                 </div>
 
                 <figure>
-                    <img src="./images/womanlanding-min.png" class="imgWoman">
+                    <img src="./Assets/womanlanding-min.png" class="imgWoman">
                 </figure>
             </div>
         </section>
@@ -186,7 +186,7 @@
     <footer class="wrapper">
         <div class="footerMenu">
             <div class="logoFooter">
-                <img src="./images/SVG/Asset 1.svg" />
+                <img src="./Assets/SVG/Asset 1.svg" />
                 <div>
                     <h5>2022 Hire It Canada - by Priscila Mattos</h5>
                 </div>
