--- a/jobBoard.html
+++ b/jobBoard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./CSS/shared.css" />
-    <link rel="stylesheet" href="./CSS/talentpage.css" />
+    <link rel="stylesheet" href="./CSS/jobBoard.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/dbb28dec5b.js" crossorigin="anonymous"></script>
@@ -26,7 +26,7 @@
                         <ul>
                             <li><a href="./index.html" class="decor">Home</a></li>
                             <li><a href="#" class="decor">Blog</a></li>
-                            <li><a href="#" class="decor">Job Board</a></li>
+                            <li><a href="./jobBoard.html" class="decor">Job Board</a></li>
                             <li><a href="#" class="buttonMenu decor menuTalent">Talent</a></li>
                             <li><a href="./company.html" class="buttonMenu decor menuCompanies">Companies</a></li>
                         </ul>
@@ -59,7 +59,7 @@
 
                 </div>
                 <div class="next-page">
-                    <a>Next Page</a><i class="fa-solid fa-angle-right fa-sm-right"></i>
+                    <a href="./applicationPage.html">Next Page</a><i class="fa-solid fa-angle-right fa-sm-right"></i>
                 </div>
 
             </div>
@@ -90,7 +90,7 @@
         </div>
 
     </footer>
-    <script src="./JavaScript/talentPage.js"></script>
+    <script src="./JavaScript/jobBoard.js"></script>
 </body>
 
 </html>
