Function created for index.html buttons

--- a/applicationPage.html
+++ b/applicationPage.html
@@ -27,7 +27,7 @@
                             <li><a href="./index.html" class="decor">Home</a></li>
                             <li><a href="#" class="decor">Blog</a></li>
                             <li><a href="./jobBoard.html" class="decor">Job Board</a></li>
-                            <li><a href="#" class="buttonMenu decor menuTalent">Talent</a></li>
+                            <li><a href="./applicationPage.html" class="buttonMenu decor menuTalent">Talent</a></li>
                             <li><a href="./company.html" class="buttonMenu decor menuCompanies">Companies</a></li>
                         </ul>
                     </div>
