--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./CSS/shared.css" />
-    <link rel="stylesheet" href="./CSS/mainpage.css" />
+    <link rel="stylesheet" href="/CSS/mainpage.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/dbb28dec5b.js" crossorigin="anonymous"></script>
@@ -24,10 +24,10 @@
                     </div>
                     <div class="mainNav">
                         <ul>
-                            <li><a href="./index.html" class="decor">Home</a></li>
+                            <li><a href="#" class="decor">Home</a></li>
                             <li><a href="#" class="decor">Blog</a></li>
-                            <li><a href="./talent.html" class="decor">Job Board</a></li>
-                            <li><a href="#" class="buttonMenu decor menuTalent">Talent</a></li>
+                            <li><a href="./jobBoard.html" class="decor">Job Board</a></li>
+                            <li><a href="./applicationPage.html" class="buttonMenu decor menuTalent">Talent</a></li>
                             <li><a href="./company.html" class="buttonMenu decor menuCompanies">Companies</a></li>
                         </ul>
                     </div>
@@ -40,13 +40,15 @@
                 <div class="cta-container">
                     <h1 class="imgTitle">Find a job in Canada</h1>
                     <div class="button">
-                        <button type="submit" class="btnHire">FIND A JOB</button>
+                        <button type="submit" class="btnHire" id="btnFind">FIND
+                            A JOB</button>
                     </div>
                 </div>
                 <div class="cta-container">
                     <h1 class="imgTitle">Hire a Talent Abroad</h1>
                     <div class="button">
-                        <button type="submit" class="btnHire">HIRE A TALENT</button>
+                        <button type="submit" class="btnHire" id="btnHire">HIRE
+                            A TALENT</button>
                     </div>
                 </div>
             </div>
@@ -129,7 +131,7 @@
                         </section>
                 </div>
                 <div class="sendResume">
-                    <button type="submit" class="btnResume">HIRE A TALENT</button>
+                    <button type="submit" class="btnResume" id="findJob">FIND A JOB</button>
                 </div>
             </div>
         </section>
@@ -176,7 +178,7 @@
                 </div>
 
                 <div class="requestCall">
-                    <button type="submit" class="bookMeeting">BOOK A MEETING</button>
+                    <button type="submit" class="bookMeeting" id="bookMeeting">BOOK A MEETING</button>
                 </div>
             </div>
         </section>
@@ -208,6 +210,8 @@
         </div>
 
     </footer>
+    <script src="./JavaScript/button.js"></script>
+
 </body>
 
 </html>
