--- a/jobBoard.html
+++ b/jobBoard.html
@@ -27,7 +27,7 @@
                             <li><a href="./index.html" class="decor">Home</a></li>
                             <li><a href="#" class="decor">Blog</a></li>
                             <li><a href="./jobBoard.html" class="decor">Job Board</a></li>
-                            <li><a href="./applicationPage.html" class="buttonMenu decor menuTalent">Talent</a></li>
+                            <li><a href="./talentPage.html" class="buttonMenu decor menuTalent">Talent</a></li>
                             <li><a href="./company.html" class="buttonMenu decor menuCompanies">Companies</a></li>
                         </ul>
                     </div>
@@ -37,6 +37,9 @@
         <!-- Main CTA -->
         <section class="container">
             <div class="wrapper">
+                <div class="back-page">
+                    <i class="fa-solid fa-angle-left fa-sm"></i><a href="./jobBoard.html">Back</a>
+                </div>
                 <div class="talent-container">
                     <h1 class="talent-title">Search for opportunities in Canada</h1>
                     <div class="searchBar">
@@ -51,9 +54,7 @@
         <section class="job-board">
             <div class="wrapper">
                 <h2>Job Openings</h2>
-                <div class="next-page">
-                    <a>Next Page</a><i class="fa-solid fa-angle-right fa-sm-right"></i>
-                </div>
+
                 <div class="board" id="job-board">
 
 
