--- a/talentPage.html
+++ b/talentPage.html
@@ -78,8 +78,9 @@
                                     <figure>
                                         <img class="img-blog" src="./Assets/blog.jpg" />
                                     </figure>
-                                    <h3>Get Ready to be Hired! Visit our blog to read more information about our
-                                        partners.</h3>
+                                    <h3><a href="./blogPage.html"></a>Get Ready to be Hired! Visit our blog to read more
+                                        information about our
+                                        partners.</a></h3>
                                 </div>
                             </div>
                         </div>
