Index adjustments for background

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </figure>
             </div>
         </section>
-        <section class="resources parallax">
+        <section class="resources">
             <div class="wrapper">
                 <div class="servCandidates">
                     <div class="sectionTitle">
@@ -99,7 +99,7 @@
                     <section class="serviceBlock">
                         <div>
                             <div class="titleService">
-                                <h3>Support 24/7</h3><i class="fa-solid fa-comment-question fa-sm"></i>
+                                <h3>Support 24/7</h3><i class="fa-solid fa-comment fa-lg"></i>
                             </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum pellentesque
                                 condimentum
@@ -109,7 +109,7 @@
                         <section class="serviceBlock">
                             <div>
                                 <div class="titleService">
-                                    <h3>Resume Match</h3><i class="fa-solid fa-file-check fa-sm"></i>
+                                    <h3>Resume Match</h3><i class="fa-solid fa-file-circle-check fa-lg"></i>
                                 </div>
                                 <p>Justo, amet feugiat bibendum sed lectus id pellentesque et justo. Ultricies volutpat
                                     leo
@@ -121,7 +121,7 @@
                         <section class="serviceBlock">
                             <div>
                                 <div class="titleService">
-                                    <h3>Career Coach</h3><i class="fa-solid fa-bullseye-arrow fa-sm"></i>
+                                    <h3>Career Coach</h3><i class="fa-solid fa-chart-line fa-lg"></i>
                                 </div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum pellentesque
                                     condimentum
@@ -183,8 +183,8 @@
             </div>
         </section>
         </div>
-    </main>
 
+    </main>
     <footer class="wrapper">
         <div class="footerMenu">
             <div class="logoFooter">
